--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.error.include-message=never
-server.port=8090
+server.error.include-message=always
+server.port=8080
 spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
